ファイルにタグを追加

--- a/second.html
+++ b/second.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>山田が作ったファイルです</h1>
-    <p>ファイルを変更しました。</p>
+    <h1>secondeファイルを作成</h1>
 </body>
 </html>
